--- a/mystyle.css
+++ b/mystyle.css
@@ -9,28 +9,33 @@ h1 {
     text-align: center;
     font-size: 80px;
 }
-
+topnav {
+    text-align: center;
+}
 ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    text-align: center;
+    align-content: center;
 }
 
-li{
-    display: inline;
-    float: left;
+li {
+    display: inline-block;
+    float: initial;
+    align-content: center;
 }
 
 a {
-    display: block;
+    display: inline-block;
     padding: 20px;
     background-color: #333;
 }
 
 li a {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -51,56 +56,6 @@ li a:hover:not(.active) {
     color: black;
 }
 
-.topnav .search-container {
-    float: right;
-}
-
-.topnav input[type=text] {
-    padding: 6px;
-    margin-top: 8px;
-    font-size: 17px;
-    border: none;
-}
-
-.topnav .search-container button {
-    float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: #ddd;
-    font-size: 17px;
-    border: none;
-    cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-    background: #ccc;
-}
-
-@media screen and (max-width: 600px) {
-    .topnav .search-container {
-        float: none;
-    }
-
-.topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-
-}
-
-    .topnav input[type=text] {
-        border: 1px solid #ccc;
-    }
-}
-
-form {
-    border: 5px solid black;
-    padding: 12px;
-}
 
 input[type=text], input[type=password] {
     width: 100%;
@@ -111,7 +66,27 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-button {
+.submitbutton {
+    background-color: maroon;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.loginbtn {
+    background-color: maroon;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.signupbtn {
     background-color: maroon;
     color: white;
     padding: 14px 20px;
@@ -170,13 +145,21 @@ span.psw {
     color: white;
 }
 
+.storecards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0px;
+    text-align: center;
+}
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 500px;
+    max-width: 100%;
     margin: auto;
     text-align: center;
     font-family: arial;
     padding: 12px;
+    display: inline-block;
 }
 
 .price {
@@ -184,19 +167,142 @@ span.psw {
     font-size: 22px;
 }
 
-.card button {
+.card .button {
     border: none;
     outline: 0;
+    display: inline-block;
     padding: 12px;
     color: white;
     background-color: #000;
     text-align: center;
     cursor: pointer;
-    width: 100%;
+    width: 80%;
     font-size: 18px;
+    box-sizing: content-box;
 }
 
 .card button:hover {
     opacity: 0.7;
 }
 
+.alert {
+    padding: 20px;
+    background-color: #ff9800;
+    color: white;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: none;
+}
+
+.dropdown-content {
+    display: none;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
+    z-index: 1;
+    position: absolute;
+}
+
+.dropdown-content a {
+    float: none;
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.user-container {
+    padding: 16px;
+    text-align: center;
+}
+
+.footer {
+    position: fixed;
+    height: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
+    padding-top: 5px;
+}
+
+.filter {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #white;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.filter {
+    overflow: auto;
+}
+
+.column {
+    float: left;
+    text-align: center;
+    margin: 2px;
+    display: none;
+}
+
+.show {
+    display: block;
+}
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: maroon;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #ddd;
+}
+.btn-group button {
+    color: white;
+    padding: 10px 24px;
+    margin: 10px;
+    cursor: pointer;
+    float: none;
+}
+
+.btn-group:after {
+    content: "";
+    clear: both;
+    display: table;
+}
