--- a/mystyle.css
+++ b/mystyle.css
@@ -285,18 +285,19 @@ span.psw {
 .btn {
     border: none;
     outline: none;
-    padding: 12px 16px;
+    padding: 4px 6px;
     background-color: maroon;
     cursor: pointer;
 }
 
 .btn:hover {
     background-color: #ddd;
+    color: black;
 }
 .btn-group button {
     color: white;
-    padding: 10px 24px;
-    margin: 10px;
+    padding: 4px 10px;
+    margin: 5px;
     cursor: pointer;
     float: none;
 }
